# moco-client

./: README.md  feature.py  main.py  ml_frame.py  pyproject.toml  requirements.txt
examples/: imdb_tiny_bert.py
examples/breast_cancer/: mlp.py
examples/cats-dogs/: analyze_rule.py  resnet.py
examples/credit-card-fraud-detect/: xgboost_example.py
examples/mnist/: mnist_cnn.py
integrations/torch/: bert_classification_model.py
src/: coloring.py  early_exit_model.py  feature.py  get_fast_models.py  main.py  ml_frame.py  schema.py  test_upload.py
